Swap the swapping of monitor to maintain focus on the screen that was active with the new content

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -43,8 +43,8 @@ bindd = SUPER, k, Move window focus up, movefocus, u
 bindd = SUPER, j, Move window focus down, movefocus, d
 
 # Move workspaces to other monitors
-bindd = SUPER SHIFT ALT, h, Move workspace to left monitor, swapactiveworkspaces, current l
-bindd = SUPER SHIFT ALT, l, Move workspace to right monitor, swapactiveworkspaces, current r
+bindd = SUPER SHIFT ALT, h, Move workspace to left monitor, swapactiveworkspaces, l current
+bindd = SUPER SHIFT ALT, l, Move workspace to right monitor, swapactiveworkspaces, r current
 
 # Swap active window with the one next to it with SUPER + SHIFT + arrow keys
 bindd = SUPER SHIFT, h, Swap window to the left, movewindow, l
