--- a/common/.config/opencode/config.template.json
+++ b/common/.config/opencode/config.template.json
@@ -42,7 +42,13 @@
     },
     "gh_grep": {
       "type": "remote",
-      "url": "https://mcp.grep.app"
+      "url": "https://mcp.grep.app",
+      "enabled": true
+    },
+    "gitlab": {
+      "type": "remote",
+      "url": "https://gitlab.com/api/v4/mcp",
+      "enabled": true
     }
   }
 }
