Revert "Move kagi mcp to local wrapper for faster opencode startup"
This reverts commit 70e9bc61e45d8218b6586847aff0f4a1c7d3d3f6.

--- a/common/.config/opencode/config.template.json
+++ b/common/.config/opencode/config.template.json
@@ -10,7 +10,7 @@
   "mcp": {
     "kagi-ken": {
       "type": "local",
-      "command": ["/home/lucky/.local/bin/opencode-kagi-ken-mcp"],
+      "command": ["npx", "-y", "github:czottmann/kagi-ken-mcp"],
       "enabled": true
     },
     "context7": {
