Remove unneeded part of kagi-ken-mcp

--- a/common/.config/opencode/config.template.json
+++ b/common/.config/opencode/config.template.json
@@ -10,7 +10,7 @@
   "mcp": {
     "kagi-ken": {
       "type": "local",
-      "command": ["npx", "-y", "github:czottmann/kagi-ken-mcp"],
+      "command": ["npx", "-y", "czottmann/kagi-ken-mcp"],
       "enabled": true
     },
     "context7": {
