Add Omarchy update binding

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -16,6 +16,7 @@ bindd = SUPER ALT, I, Install aur package, exec, omarchy-launch-floating-termina
 bindd = SUPER CTRL SHIFT, I, Install flatpak package, exec, omarchy-launch-floating-terminal-with-presentation ~/Applications/fp-browse
 bindd = SUPER CTRL SHIFT, R, Remove flatpak package, exec, omarchy-launch-floating-terminal-with-presentation ~/Applications/fp-browse --remove
 bindd = SUPER SHIFT, R, Remove package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-remove
+bindd = SUPER SHIFT, U, Update Omarchy, exec, omarchy-launch-floating-terminal-with-presentation omarchy-update
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
 bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
