Unbind default omarchy hjkl for VIM like navigation

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -36,6 +36,8 @@ bindd = SUPER, d, Applications, exec, omarchy-launch-walker
 # Remove default bindings
 unbind = SUPER, J
 unbind = SUPER, K
+unbind = SUPER, H
+unbind = SUPER, L
 
 # Move focus with SUPER + arrow keys
 bindd = SUPER, h, Move window focus left, movefocus, l
